[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyREUser3"
version = "0.2.0"
description = "Pure Python tools for converting RE Engine .user.3 files to and from JSON."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Egg Targaryen" }
]
keywords = ["RE Engine", "user.3", "JSON", "modding", "RSZ"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: File Formats",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
dependencies = [
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "twine>=5.0"
]

[project.urls]
Homepage = "https://github.com/dzxrly/PyREUser3"
Repository = "https://github.com/dzxrly/PyREUser3"
Issues = "https://github.com/dzxrly/PyREUser3/issues"

[project.scripts]
pyreuser3 = "pyreuser3.cli:main"
pyreuser3-web = "pyreuser3.web.server:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pyreuser3*"]
exclude = ["tests*", "debug*"]
